--- a/index.html
+++ b/index.html
@@ -40,30 +40,30 @@
       <div class="top-text"><p>What we Offer</p><h2>We offer full service autorepair <br> & maintenance</h2></div>
       <div class="container-box">
         <div class="col-1">
-          <div class="box-1"><img src="/images/diagnostics.png" alt=""></div>
-          <div class="box-5"><img src="/images/body work.png" alt=""></div>
+          <div class="box-1"><a href=""><img src="/images/diagnostics.png" alt=""></a></div>
+          <div class="box-5"><a href=""><img src="/images/body work.png" alt=""></a></div>
         </div>
     <div class="col-2">
-      <div class="box-2"><img src="/images/engine repair.png" alt=""></div>
-      <div class="box-6"><img src="/images/Batteries.png" alt=""></div>
+      <div class="box-2"><a href=""><img src="/images/engine repair.png" alt=""></a></div>
+      <div class="box-6"><a href=""><img src="/images/Batteries.png" alt=""></a></div>
     </div>
     <div class="col-3">
-      <div class="box-3"><img src="/images/wheel repair.png" alt=""></div>
-      <div class="box-7"><img src="/images/Insurance claim.png" alt=""></div>
+      <div class="box-3"><a href=""><img src="/images/wheel repair.png" alt=""></a></div>
+      <div class="box-7"><a href=""><img src="/images/Insurance claim.png" alt=""></a></div>
     </div>
     <div class="col-4">
-      <div class="box-4"><img src="/images/oil filter.png" alt=""></div>
-      <div class="boc-8"><img src="/images/Custom service.png" alt=""></div>
+      <div class="box-4"><a href=""><img src="/images/oil filter.png" alt=""></a></div>
+      <div class="boc-8"><a href=""><img src="/images/Custom service.png" alt=""></a></div>
     </div>
   </div>
-  <div class="end-note"><p id="end-note">Learn about services</p><img src="/images/arrow.png" alt=""></div>
+  <div class="end-note"><p id="end-note">Learn about services</p><a href=""><img src="/images/arrow.png" alt=""></a></div>
 </div>
 </section>
 <!-- CTA-section -->
 <section id="cta">
   <div class="photo-set">
     <div class="img-1"></div>
-    <div class="get-in"><p>Get in touch with us for your service related query</p></div>
+    <div class="get-in"><p>Get in touch with us for your service related query</p><input type="Submit" value="Contact Us"></div>
     <div class="img-2"></div>
   </div>
   <div class="experience"><div id="first"><h3>20+</h3> <p>Professional</p></div>
