ch:completed task-3

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/styles.css" type="text/css"/>
+    <link rel="stylesheet" href="./css/styles.css" type="text/css"/>
   </head>
   <body>
     <!-- process-section -->
@@ -40,23 +40,23 @@
       <div class="top-text"><p>What we Offer</p><h2>We offer full service autorepair <br> & maintenance</h2></div>
       <div class="container-box">
         <div class="col-1">
-          <div class="box-1"><a href=""><img src="/images/diagnostics.png" alt=""></a></div>
-          <div class="box-5"><a href=""><img src="/images/body work.png" alt=""></a></div>
+          <div class="box-1"><a href=""><img src="./images/diagnostics.png" alt=""></a></div>
+          <div class="box-5"><a href=""><img src="./images/body work.png" alt=""></a></div>
         </div>
     <div class="col-2">
-      <div class="box-2"><a href=""><img src="/images/engine repair.png" alt=""></a></div>
-      <div class="box-6"><a href=""><img src="/images/Batteries.png" alt=""></a></div>
+      <div class="box-2"><a href=""><img src="./images/engine repair.png" alt=""></a></div>
+      <div class="box-6"><a href=""><img src="./images/Batteries.png" alt=""></a></div>
     </div>
     <div class="col-3">
-      <div class="box-3"><a href=""><img src="/images/wheel repair.png" alt=""></a></div>
-      <div class="box-7"><a href=""><img src="/images/Insurance claim.png" alt=""></a></div>
+      <div class="box-3"><a href=""><img src="./images/wheel repair.png" alt=""></a></div>
+      <div class="box-7"><a href=""><img src="./images/Insurance claim.png" alt=""></a></div>
     </div>
     <div class="col-4">
-      <div class="box-4"><a href=""><img src="/images/oil filter.png" alt=""></a></div>
-      <div class="boc-8"><a href=""><img src="/images/Custom service.png" alt=""></a></div>
+      <div class="box-4"><a href=""><img src="./images/oil filter.png" alt=""></a></div>
+      <div class="boc-8"><a href=""><img src="./images/Custom service.png" alt=""></a></div>
     </div>
   </div>
-  <div class="end-note"><p id="end-note">Learn about services</p><a href=""><img src="/images/arrow.png" alt=""></a></div>
+  <div class="end-note"><p id="end-note">Learn about services</p><a href=""><img src="./images/arrow.png" alt=""></a></div>
 </div>
 </section>
 <!-- CTA-section -->
@@ -77,8 +77,8 @@
   <div class="container-5">
   <div class="logo">
     <h2>Brands we serve</h2>
-    <div><img src="/images/Brand Row.png" alt=""></div>
-    <div><img src="/images/Brand Row.png" alt=""></div>
+    <div><img src="./images/Brand Row.png" alt=""></div>
+    <div><img src="./images/Brand Row.png" alt=""></div>
   </div></div>
 </section>
   </body>
