git commit -m "ch:complete"

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-g8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
@@ -23,14 +23,14 @@
         </div>
         <div class="process-right">
           <div class="right-3">
-            <div class="image-box"><img src="/images/Group 9129.png" alt="" width="72px"/></div>
+            <div class="image-box"><img src="./images/Group 9129.png" alt="" width="72px"/></div>
             <div class="note"><h3>Get a Quote</h3><p>We attend to you services anywhere, anytime <br> at you convenient. No stress,<br> just a call through</p></div>
           </div>
           <div class="right-3">
-            <div class="image-box"><img src="/images/Group 9130.png" alt="" width="72px"></div>
+            <div class="image-box"><img src="./images/Group 9130.png" alt="" width="72px"></div>
             <div class="note"><h3>Book an Appointment</h3><p>We attend to you services anywhere, anytime <br> at you convenient. No stress, <br> just a call through</p></div>
           </div>
-          <div class="right-3"><div class="image-box"><img src="/images/Group 9131.png" alt="" width="72px"></div><div class="note"><h3>Get you Service Done</h3><p id="para-3">We attend to you services anywhere, anytime <br> at you convenient. No stress, <br> just a call through</p></div></div>
+          <div class="right-3"><div class="image-box"><img src="./images/Group 9131.png" alt="" width="72px"></div><div class="note"><h3>Get you Service Done</h3><p id="para-3">We attend to you services anywhere, anytime <br> at you convenient. No stress, <br> just a call through</p></div></div>
         </div>
         </div>
       </div>
