--- a/index.html
+++ b/index.html
@@ -5,9 +5,148 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css" type="text/css"/>
+    <link rel="stylesheet" href="css/styles.css" type="text/css"/>
   </head>
   <body>
+    <!-- header-section -->
+    <header>
+      <div class="container">
+        <div class="main-header">
+          <div class="logo-section">
+            <img src="./images/Logo.png" alt="Company Logo">
+          </div>
+          <div class="right-section">
+            <div class="navigation">
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </div>
+            <div class="road-assistance">
+              <div class="icon">
+                <img src="./images/Assistance Icon.png" alt="">
+              </div>
+              <div class="inner-section">
+                <p>Road Assistance</p>
+                <p style="font-weight: 800;">1800 265 24 52</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+      </div>
+
+    </header>
+    <!-- hero-section -->
+    <section id="hero-section">
+      <div class="container">
+        <div class="flex">
+          <div class="text-section">
+            <h1>Get your vehicle service done online at one place</h1>
+            <button class="orange-btn">Book a service</button>
+            <div class="time-section flex">
+              <div class="image-box">
+                <img src="./images/clock.png" alt="clock ">
+              </div>
+              <div class="time-text">
+                <p class="light-grey">We are open</p>
+              <p>Monday to Friday 9:00 AM to  10:00  AM</p>
+              </div>
+            </div>
+          </div>
+          <div class="image-section">
+            <img src="./images/Header Image.png" alt="mechanic working">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- quote-section -->
+    <section id="quote-section">
+      <div class="container">
+        <div class="flex">
+          <div class="left-section">
+            <h2>We are taking car servicing seriously</h2>
+            <ul>
+              <li>
+                <div class="flex">
+                  <div class="image-box">
+                    <img src="./images/gear.png" alt="">
+                  </div>
+                  <div class="text-box">
+                    <h5>Convenient service</h5>
+                    <p>Through True Rich Attended does no end it his mother since real had half every him.</p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <div class="flex">
+                  <div class="image-box">
+                    <img src="./images/gear.png" alt="">
+                  </div>
+                  <div class="text-box">
+                    <h5>Expert mechanics</h5>
+                    <p>Through True Rich Attended does no end it his mother since real had half every him.</p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <div class="flex">
+                  <div class="image-box">
+                    <img src="./images/gear.png" alt="">
+                  </div>
+                  <div class="text-box">
+                    <h5>Transparent pricing</h5>
+                    <p>Through True Rich Attended does no end it his mother since real had half every him.</p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <div class="flex">
+                  <div class="image-box">
+                  </div>
+                  <div class="text-box">
+                    <a href="">Know more about us</a>
+                    <a href=""><img src="./images/arrow.png" alt=""></a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+
+          </div>
+          <div class="right-form-section">
+            <h3>Get a quote for the car service</h3>
+            <form action="">
+              <div class="input-box">
+                <input type="text" placeholder="Enter your location">
+              </div>
+              <div class="input-box">
+                <input type="text" placeholder="Enter your location">
+              </div>
+              <div class="input-box">
+                <input type="text" placeholder="Enter your location">
+              </div>
+              <div class="input-box">
+                <input type="text" placeholder="Enter your location">
+              </div>
+              <div class="input-box">
+                <input type="text" placeholder="Your phone number">
+              </div>
+              <button>Get a quote</button>
+            </form>
+          </div>
+        </div>
+      </div>
+
+    </section>
     <!-- process-section -->
     <section id="process-section">
       <div class="container-3">
@@ -80,6 +219,119 @@
     <div><img src="./images/Brand Row.png" alt=""></div>
     <div><img src="./images/Brand Row.png" alt=""></div>
   </div></div>
+</section>
+<!-- testimonials-section -->
+<section id="testimonials-section">
+  <div class="big-container">
+    <div class="heading"><h2>Our customers say the nicest things <br> about our service</h2></div>
+    <div class="container-6">
+      <div class="left-section">
+        <div class="comment">
+          <div class="image-box">
+            <img src="./images/jonathan.png" alt="">
+          </div>
+          <div class="text-box">
+            <h5>Jonathan Vallem</h5>
+            <p>New york</p>
+          </div>
+        </div>
+        <div class="comment-text">
+          <p>I have got my car repaired at Finsweet many times before, they are good at what they do. Not only did they repair my car in a short comprehensive look on all the working</p>
+        </div>
+      </div>
+      <div class="right-comment-section">
+        <div class="comment">
+          <div class="image-box">
+            <img src="./images/smith.jpg" alt="">
+          </div>
+          <div class="text-box">
+            <h5>Smith Johnson</h5>
+            <p>New york</p>
+          </div>
+        </div>
+        <div class="comment-text">
+          <p>I have got my car repaired at Finsweet many times before, they are good at what they do. Not only did they repair my car in a short comprehensive look on all the working</p>
+        </div>
+      </div>
+        </div>
+        <div class="lines">
+          <img src="./images/Lines.png" alt="">
+        </div>    
+        <div class="ending">
+          <a href="#"><img src="./images/Sliders.png" alt=""></a>
+        </div>
+      </div>
+</section>
+<!-- faq-section -->
+<section id="faq">
+  <h1>Frequently Asked Questions</h1>
+  <div class="container-7">
+    <div class="q-1">
+      <div class="question">
+        <h3>How long should a car repair take?</h3>
+        <div class="plus-icon"><img src="./images/minus.png" alt=""></div>
+      </div>
+      <div class="para"><p>I have got my car repaired at Finsweet many times before, they are good at what they do. Not only did they repair my car I have got my car repaired at Finsweet I have got my car repaired at Finsweet</p></div>
+    </div>
+    <div class="q-2">
+      <div class="question">
+        <h3>How do I schedule my car's appointment?</h3>
+        <div class="plus-icon"><img src="./images/plus.png" alt=""></div>
+      </div>
+    </div>
+    <div class="q-2">
+      <div class="question">
+        <h3>What are the repair services provided?</h3>
+        <div class="plus-icon"><img src="./images/plus.png" alt=""></div>
+      </div>
+    </div>
+    <div class="q-2">
+      <div class="question">
+        <h3>How do I find auto body shops near me?</h3>
+        <div class="plus-icon"><img src="./images/plus.png" alt=""></div>
+      </div>
+    </div>
+    <div class="q-2">
+      <div class="question flex">
+        <h3>Genuine spare parts during car repair?</h3>
+        <div class="plus-icon"><img src="./images/plus.png" alt=""></div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- footer-section -->
+<section id="footer">
+  <div class="bigg-container">
+    <div class="top-container">
+      <div class="container-8">
+        <div class="lt">
+          <h3>Get in touch with us <br> for your  service</h3>
+          <a href="#"><img src="./images/Social.png" alt=""></a>
+        </div>
+        <div class="rt">
+          <h5>Help line Noumber</h5>
+          <p>1800 265 24 52</p>
+          <h5>Address</h5>
+          <p>NH 234   Public Square San Francisco  65368</p>
+          <h5>We are open</h5>
+          <p>Monday to Friday 9:00 AM to  10:00  AM</p>
+        </div>
+      </div>
+    </div>
+    <div class="bottom-container">
+      <div class="icon"><img src="./images/logo-2.png" alt=""></div>
+      <div class="links">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About us</a></li>
+          <li><a href="">Services</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Contact us</a></li>
+        </ul>
+      </div>
+      <p>@ Copyright Finsweet 2021</p>
+    </div>
+  </div>
 </section>
   </body>
 </html>
