ch:complete task

--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
     <div class="img-2"></div>
   </div>
   <div class="experience"><div id="first"><h3>20+</h3> <p>Professional</p></div>
-  <div><h3>10+</h3><p>Years Experience</p></div>
-  <div><h3>12k+</h3><p>Services Closed</p></div>
-  <div id="last"><h3>100%</h3><p>Customer Satisfaction</p></div>
+  <div class="box"><h3>10+</h3><p>Years Experience</p></div>
+  <div class="box"><h3>12k+</h3><p>Services Closed</p></div>
+  <div id="box"><h3>100%</h3><p>Customer Satisfaction</p></div>
 </div>
 </section>
 <!-- brands-section -->
@@ -229,7 +229,7 @@
 <!-- testimonials-section -->
 <section id="testimonials-section">
   <div class="big-container">
-    <div class="heading"><h2>Our customers say the nicest things <br> about our service</h2></div>
+    <div class="heading"><h2>Our customers say the nicest things about our service</h2></div>
     <div class="container-6">
       <div class="left-section">
         <div class="comment">
