--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Finsweet</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css"/>
   </head>
   <body>
@@ -20,7 +20,7 @@
               <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="/services.html">Services</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact</a></li>
               </ul>
