--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="right-section">
             <div class="navigation">
               <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="/services.html">Services</a></li>
                 <li><a href="#">Blog</a></li>
@@ -328,9 +328,9 @@
       <div class="icon"><img src="./images/logo-2.png" alt=""></div>
       <div class="links">
         <ul>
-          <li><a href="">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="">About us</a></li>
-          <li><a href="">Services</a></li>
+          <li><a href="./services.html">Services</a></li>
           <li><a href="">Blog</a></li>
           <li><a href="">Contact us</a></li>
         </ul>
