--- a/services.html
+++ b/services.html
@@ -207,7 +207,7 @@
           <ul>
             <li><a href="./index.html">Home</a></li>
             <li><a href="">About us</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="./services.html">Services</a></li>
             <li><a href="">Blog</a></li>
             <li><a href="">Contact us</a></li>
           </ul>
