--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <li>
                 <div class="flex">
                   <div class="image-box">
-                    <img src="./images/gear.png" alt="">
+                    <img src="./images/person.png" alt="">
                   </div>
                   <div class="text-box">
                     <h5>Expert mechanics</h5>
@@ -99,7 +99,7 @@
               <li>
                 <div class="flex">
                   <div class="image-box">
-                    <img src="./images/gear.png" alt="">
+                    <img src="./images/money.png" alt="">
                   </div>
                   <div class="text-box">
                     <h5>Transparent pricing</h5>
@@ -179,16 +179,16 @@
       <div class="top-text"><p>What we Offer</p><h2>We offer full service autorepair <br> & maintenance</h2></div>
       <div class="container-box">
         <div class="col-1">
-          <div class="box-1"><a href=""><img src="./images/diagnostics.png" alt=""></a></div>
-          <div class="box-2"><a href=""><img src="./images/engine repair.png" alt=""></a></div>
-          <div class="box-3"><a href=""><img src="./images/wheel repair.png" alt=""></a></div>
-          <div class="box-4"><a href=""><img src="./images/oil filter.png" alt=""></a></div>
+          <div class="box-1"><img src="./images/diagnostics.png" alt=""></div>
+          <div class="box-2"><img src="./images/engine repair.png" alt=""></div>
+          <div class="box-3"><img src="./images/wheel repair.png" alt=""></div>
+          <div class="box-4"><img src="./images/oil filter.png" alt=""></div>
         </div>
         <div class="col-2">
-          <div class="box-5"><a href=""><img src="./images/body work.png" alt=""></a></div>
-          <div class="box-6"><a href=""><img src="./images/Batteries.png" alt=""></a></div>
-          <div class="box-7"><a href=""><img src="./images/Insurance claim.png" alt=""></a></div>
-          <div class="boc-8"><a href=""><img src="./images/Custom service.png" alt=""></a></div></div>
+          <div class="box-5"><img src="./images/body work.png" alt=""></div>
+          <div class="box-6"><img src="./images/Batteries.png" alt=""></div>
+          <div class="box-7"><img src="./images/Insurance claim.png" alt=""></div>
+          <div class="boc-8"></a><img src="./images/Custom service.png" alt=""></div></div>
           
     <!-- <div class="col-2">
       <div class="box-2"><a href=""><img src="./images/engine repair.png" alt=""></a></div>
