--- a/services.html
+++ b/services.html
@@ -86,13 +86,13 @@
             <div class="container">
               <div class="col-left">
                 <img src="./images/auto diagnost.png" alt="" />
-                <img src="./images/body work 2.png" alt="" />
+                <a href=""><img src="./images/body work 2.png" alt="" /></a>
                 <img src="./images/car wash.png" alt="" />
               </div>
               <div class="col-right">
-                <img src="./images/engine.png" alt="" />
-                <img src="./images/battery.png" alt="" />
-                <img src="./images/AC repair.png" alt="" />
+                <a href=""><img src="./images/engine.png" alt="" /></a>
+                <a href=""><img src="./images/battery.png" alt="" /></a>
+                <a href=""><img src="./images/AC repair.png" alt="" /></a>
               </div>
             </div>
           </div>
