--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
           <div class="right-section">
             <div class="navigation">
               <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="/services.html">Services</a></li>
                 <li><a href="#">Blog</a></li>
