--- a/services.html
+++ b/services.html
@@ -38,7 +38,7 @@
         </div>
       </div>
     </header>
-    <!-- head-section -->
+    <!-- first-section -->
     <section id="head-section">
       <div class="container">
         <div class="flex">
