--- a/services.html
+++ b/services.html
@@ -20,7 +20,7 @@
               <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="/services.html">Services</a></li>
+                <li><a href="./services.html">Services</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact</a></li>
               </ul>
